Documentación de README y sus imagenes.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <figure>
-            <img src="logo-surf.png" alt="Logo del sitio Surf Costa Rica" width="100" tabindex="0">
+            <img src="imgs/logo-surf.png" alt="Logo del sitio Surf Costa Rica" width="100" tabindex="0">
             <figcaption>Surf - Vive la ola</figcaption>
         </figure>
         <h1>Surf - Todo sobre el mundo del surf en Costa Rica</h1>
