--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
                         <a href="https://www.instagram.com/fedesurfcr/" target="_blank" rel="noopener noreferrer" aria-label="Instagram de la Federación de Surf de Costa Rica">Instagram - Federación de Surf CR</a>
                     </div>
                 </nav>
+
+                <!-- Menu hamburguesa BORRADOR-->
+                <!-- <nav class="menu-hamburguesa">
+                    <button class="hamburguesa-btn" aria-label="Abrir menú de navegación">
+                        <span class="hamburguesa-line"></span>
+                        <span class="hamburguesa-line"></span>
+                        <span class="hamburguesa-line"></span>
+                    </button>
+                    <div class="hamburguesa-menu">
+                        <a href="#eventos">Eventos</a>
+                        <a href="#productos">Productos</a>
+                        <a href="#lugares">Lugares</a>
+                        <a href="#contacto">Contacto</a>
+                        <a href="#noticias">Noticias</a>
+                        <a href="https://www.instagram.com/fedesurfcr/" target="_blank" rel="noopener noreferrer" aria-label="Instagram de la Federación de Surf de Costa Rica">Instagram - Federación de Surf CR</a>
+                    </div>
+
+                </nav> -->
     </header>
     <main>
         <section id="eventos">
