REWORK: Los diseños están cambiandose entonces se eliminaron algunos bloques de css y se reorganizaron para mejor lectura. Trabajando en Menú Hamburguesa

--- a/index.html
+++ b/index.html
@@ -17,37 +17,24 @@
             <figcaption>Surf - Vive la ola</figcaption>
         </figure>
         <h1>Surf - Todo sobre el mundo del surf en Costa Rica</h1>
-                <nav class="main-nav">
-                    <!-- div para agrupar las secciones de navegación y el enlace externo -->
-                    <div class="nav-secciones">
-                        <a href="#eventos">Eventos</a>
-                        <a href="#productos">Productos</a>
-                        <a href="#lugares">Lugares</a>
-                        <a href="#contacto">Contacto</a>
-                        <a href="#noticias">Noticias</a>
-                    </div>
-                    <div class="nav-externo">
-                        <a href="https://www.instagram.com/fedesurfcr/" target="_blank" rel="noopener noreferrer" aria-label="Instagram de la Federación de Surf de Costa Rica">Instagram - Federación de Surf CR</a>
-                    </div>
-                </nav>
-
-                <!-- Menu hamburguesa BORRADOR-->
-                <!-- <nav class="menu-hamburguesa">
-                    <button class="hamburguesa-btn" aria-label="Abrir menú de navegación">
-                        <span class="hamburguesa-line"></span>
-                        <span class="hamburguesa-line"></span>
-                        <span class="hamburguesa-line"></span>
-                    </button>
-                    <div class="hamburguesa-menu">
-                        <a href="#eventos">Eventos</a>
-                        <a href="#productos">Productos</a>
-                        <a href="#lugares">Lugares</a>
-                        <a href="#contacto">Contacto</a>
-                        <a href="#noticias">Noticias</a>
-                        <a href="https://www.instagram.com/fedesurfcr/" target="_blank" rel="noopener noreferrer" aria-label="Instagram de la Federación de Surf de Costa Rica">Instagram - Federación de Surf CR</a>
-                    </div>
-
-                </nav> -->
+            <!--Botón toggle para menu hamburguesa-->
+            <input type="checkbox" id="nav-toggle" class="nav-toggle visually-hidden">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span class="hamburger-icon"></span>
+                <span class="visually-hidden">Menú</span>
+            </label>
+            <nav class="main-nav" id="main-nav">
+                <div class="nav-secciones">
+                    <a href="#eventos">Eventos</a>
+                    <a href="#productos">Productos</a>
+                    <a href="#lugares">Lugares</a>
+                    <a href="#contacto">Contacto</a>
+                    <a href="#noticias">Noticias</a>
+                </div>
+                <div class="nav-externo">
+                    <a href="https://www.instagram.com/fedesurfcr/" target="_blank" rel="noopener noreferrer">Instagram - Federación de Surf CR</a>
+                </div>
+            </nav>
     </header>
     <main>
         <section id="eventos">
